--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
-        "tailwindcss": "^3.1.0"
+        "tailwindcss": "^3.1.0",
+        "loader-utils": ">=2.0.4",
+        "json5": ">=2.2.2"
     }
 }
